--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
         <div class="grid">
 
             <div class="item1">
-                <img class="grid-image" src="img1.jpg" alt="image1" />
+                <img class="grid-image" src="images/img1.jpg" alt="image1" />
             </div>
             <div class="item2">
-                <img class="grid-image" src="img2.jpg" alt="image2" />
+                <img class="grid-image" src="images/img2.jpg" alt="image2" />
             </div>
             <div class="item3">
-                <img class="grid-image" src="img5.jpg" alt="image3" />
+                <img class="grid-image" src="images/img5.jpg" alt="image3" />
             </div>
             <div class="item4">
-                <img class="grid-image" src="img6.jpg" alt="image4" />
+                <img class="grid-image" src="images/img6.jpg" alt="image4" />
             </div>
             <div class="item5">
-                <img class="grid-image"  src="img8.jpg" alt="image5" />
+                <img class="grid-image"  src="images/img8.jpg" alt="image5" />
             </div>
             <div class="item6">
-                <img class="grid-image" src="img11.jpg" alt="image6" />
+                <img class="grid-image" src="images/img11.jpg" alt="image6" />
             </div>
             <div class="item7">
-                <img class="grid-image" src="img3.jpg" alt="image7" />
+                <img class="grid-image" src="images/img3.jpg" alt="image7" />
             </div>
             <div class="item8">
-                <img class="grid-image" src="img7.jpg" alt="image8" />
+                <img class="grid-image" src="images/img7.jpg" alt="image8" />
             </div>
             <div class="item9">
-                <img class="grid-image" src="img9.jpg" alt="image9" />
+                <img class="grid-image" src="images/img9.jpg" alt="image9" />
             </div>
             
         </div>
